--- a/plugin.xml
+++ b/plugin.xml
@@ -16,7 +16,7 @@
   <asset src="www/ui/ionic/templates/shake-detect-display-detail.html" target="templates/control/shake-detect-display-detail.html"/>
   <asset src="www/ui/ionic/js/shake-detect-settings.js" target="js/control/shake-detect-settings.js"/>
 
-  <js-module src="www/shakeDetect.js" name="ShakeDetect">
+  <js-module src="www/shakedetect.js" name="shakedetect">
     <clobbers target="cordova.plugins.BEMShakeDetection" />
   </js-module>
 
@@ -35,8 +35,8 @@
   <platform name="android">
 
     <config-file target="res/xml/config.xml" parent="/*">
-      <feature name="shakeDetect">
-        <param name="android-package" value="edu.berkeley.eecs.emission.cordova.shakeDetect.shakeNotifier"/>
+      <feature name="ShakeDetection">
+        <param name="android-package" value="edu.berkeley.eecs.emission.cordova.shakedetect.shakeNotifier"/>
       </feature>
     </config-file>
 
@@ -46,20 +46,18 @@
             android:enabled="true">
             <intent-filter>
                 <action android:name="local.detection.incident"></action>
-                <action android:name="local.detection.no_incident"></action>
             </intent-filter>
         </receiver>
     </config-file>
 
-    <source-file src="src/android/shakeNotifier.java" target-dir="src/edu/berkeley/eecs/emission/cordova/shakeDetect"/>
-    <source-file src="src/android/shakeDetector.java" target-dir="src/edu/berkeley/eecs/emission/cordova/shakeDetect"/>
-    <resource-file src="res/android/statemachine.xml" target="res/values/statemachine.xml" />
+    <source-file src="src/android/shakeNotifier.java" target-dir="src/edu/berkeley/eecs/emission/cordova/shakedetect"/>
+    <source-file src="src/android/shakeDetector.java" target-dir="src/edu/berkeley/eecs/emission/cordova/shakedetect"/>
   </platform>
 
   <platform name="ios">
     
     <config-file target="config.xml" parent="/*">
-      <feature name="TransitionNotification">
+      <feature name="Shake-Detection">
         <param name="ios-package" value="shakeDetector" />
       </feature>
     </config-file>
