--- a/plugin.xml
+++ b/plugin.xml
@@ -36,13 +36,13 @@
 
     <config-file target="res/xml/config.xml" parent="/*">
       <feature name="ShakeDetection">
-        <param name="android-package" value="edu.berkeley.eecs.emission.cordova.shakedetect.shakeNotifier"/>
+        <param name="android-package" value="edu.berkeley.eecs.emission.cordova.shakedetect.ShakeNotifier"/>
       </feature>
     </config-file>
 
     <config-file target="AndroidManifest.xml" parent="/manifest/application">
         <receiver
-            android:name="edu.berkeley.eecs.emission.cordova.shakedetect.shakeNotificationReceiver"
+            android:name="edu.berkeley.eecs.emission.cordova.shakedetect.ShakeNotificationReceiver"
             android:enabled="true">
             <intent-filter>
                 <action android:name="local.transition.initialize"></action>
@@ -52,11 +52,11 @@
                 <action android:name="local.transition.start_tracking"></action>
             </intent-filter>
         </receiver>
-        <service android:exported="false" android:name="edu.berkeley.eecs.emission.cordova.shakedetect.shakeDetector"></service>
+        <service android:exported="false" android:name="edu.berkeley.eecs.emission.cordova.shakedetect.ShakeDetector"></service>
     </config-file>
 
-    <source-file src="src/android/shakeDetector.java" target-dir="src/edu/berkeley/eecs/emission/cordova/shakedetect"/>
-    <source-file src="src/android/shakeNotificationReceiver.java" target-dir="src/edu/berkeley/eecs/emission/cordova/shakedetect"/>
-    <source-file src="src/android/shakeNotifier.java" target-dir="src/edu/berkeley/eecs/emission/cordova/shakedetect"/>
+    <source-file src="src/android/ShakeDetector.java" target-dir="src/edu/berkeley/eecs/emission/cordova/shakedetect"/>
+    <source-file src="src/android/ShakeNotificationReceiver.java" target-dir="src/edu/berkeley/eecs/emission/cordova/shakedetect"/>
+    <source-file src="src/android/ShakeNotifier.java" target-dir="src/edu/berkeley/eecs/emission/cordova/shakedetect"/>
   </platform>
 </plugin>
