--- a/plugin.xml
+++ b/plugin.xml
@@ -17,7 +17,7 @@
   <asset src="www/ui/ionic/js/shake-detect-settings.js" target="js/control/shake-detect-settings.js"/>
 
   <js-module src="www/shakedetect.js" name="shakedetect">
-    <clobbers target="cordova.plugins.BEMShakeDetection" />
+    <clobbers target="cordova.plugins.BEMShakeNotification" />
   </js-module>
 
   <!--
@@ -59,4 +59,17 @@
     <source-file src="src/android/ShakeNotificationReceiver.java" target-dir="src/edu/berkeley/eecs/emission/cordova/shakedetect"/>
     <source-file src="src/android/ShakeNotifier.java" target-dir="src/edu/berkeley/eecs/emission/cordova/shakedetect"/>
   </platform>
+
+  <platform name="ios">
+    
+    <config-file target="config.xml" parent="/*">
+      <feature name="ShakeDetection">
+        <param name="ios-package" value="BEMShakeNotifier" />
+      </feature>
+    </config-file>
+
+    <header-file src="src/ios/BEMShakeNotifier.h"/>
+    <source-file src="src/ios/BEMShakeNotifier.m"/>
+  </platform>
+
 </plugin>
